tests/invalid/sorted_three_args/main.py
def main() -> None:
    xs: list[int] = [3, 1, 2]
    ys = sorted(xs, xs, xs)
    print(ys)
